# ROS-Based-Multi-Robot-Interaction-Framework

./: README.md
multi_robot/: package.xml
multi_robot/config/: ur10_controllers.yaml
multi_robot/launch/: gazebo_mobile.launch  gazebo_multi.launch  test.launch
multi_robot/msg/: RobotSignal.msg
multi_robot/rviz/: rviz.world.rviz
multi_robot/scripts/Camera_Feed/: camera_check.py
multi_robot/scripts/MR_Navigation/: go_to_point_no_obst.py  go_to_point_obst.py  got_to.py  motion_plan_node.py  robot_position.py
multi_robot/scripts/UR_Motion/: ur_home.py
multi_robot/urdf/: combined_gazebo.urdf.xacro  combined_robots.urdf.xacro  multi_robot.urdf.xacro
robot_description/: CmakeLists.txt  package.xml
robot_description/meshes/collision/: base_link.STL  fron_left_wheel_link.STL  front_right_wheel_link.STL  rear_right_wheel_link.STL
ulrich_robot/config/: controller.yaml  robot_controllers.yaml
ulrich_robot/scripts/: laser_motion.py
ulrich_robot/urdf/: camera_feed.xacro  four_diff_drive_gazebo.xacro  laser_scan.xacro  robot_description.xacro  transmission.xacro  ulrich_robot.urdf.xacro
