<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  
  <maintainer email="john@todo.todo">john</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>xacro</exec_depend>

  <!-- Testing dependencies (optional) -->
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

